fix: improve auth flow and email templates
- Fix auth callback handling in hooks.server.ts
- Add proper TypeScript types for event.locals
- Move auth callback logic to hooks.server.ts
- Update email templates with new design and branding
- Remove redundant code from auth/callback route

--- a/emails-to-build.html
+++ b/emails-to-build.html
@@ -1,83 +1,74 @@
 <!-- 1. Confirm Signup Template -->
-<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #ffffff; color: #1a1a1a;">
-  <div style="margin-bottom: 24px; text-align: center;">
+<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 40px 20px; background-color: #ffffff; color: #1a1a1a; text-align: center;">
+  <div style="margin-bottom: 32px;">
     <img src="https://www.ldrboard.co/logos/ldrb-logo-colourlight.svg" alt="LDRboard" height="40">
   </div>
-  <h1 style="color: #0F172A; font-size: 24px; font-weight: 600; margin-bottom: 16px;">Welcome to ldrboard!</h1>
-  <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">Thanks for signing up. Please confirm your email address to get started.</p>
-  <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 24px; background-color: #0F172A; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Confirm Email</a>
-  <p style="color: #666666; font-size: 14px; margin-top: 16px;">Or copy and paste this URL into your browser:<br>{{ .ConfirmationURL }}</p>
+  <div style="background-color: #f8f9fa; padding: 32px; border-radius: 12px; margin-bottom: 32px;">
+    <h1 style="color: #1c1821; font-size: 24px; font-weight: 600; margin-bottom: 16px;">Welcome to ldrboard!</h1>
+    <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">Thanks for signing up. Please confirm your email address to get started.</p>
+    <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 32px; background-color: #6e4ef4; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Confirm Email</a>
+  </div>
   <div style="margin-top: 32px; padding-top: 16px; border-top: 1px solid #e5e5e5;">
     <p style="color: #666666; font-size: 14px;">If you didn't create this account, you can safely ignore this email.</p>
   </div>
 </div>
 
 <!-- 2. Invite User Template -->
-<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #ffffff; color: #1a1a1a;">
-  <div style="margin-bottom: 24px; text-align: center;">
+<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 40px 20px; background-color: #ffffff; color: #1a1a1a; text-align: center;">
+  <div style="margin-bottom: 32px;">
     <img src="{{ .SiteURL }}/logo.png" alt="LDRboard" height="40">
   </div>
-  <h1 style="color: #0F172A; font-size: 24px; font-weight: 600; margin-bottom: 16px;">You've been invited!</h1>
-  <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">You've been invited to join an organization on LDRboard. Click the button below to accept the invitation.</p>
-  <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 24px; background-color: #0F172A; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Accept Invitation</a>
-  <p style="color: #666666; font-size: 14px; margin-top: 16px;">Or copy and paste this URL into your browser:<br>{{ .ConfirmationURL }}</p>
+  <div style="background-color: #f8f9fa; padding: 32px; border-radius: 12px; margin-bottom: 32px;">
+    <h1 style="color: #1c1821; font-size: 24px; font-weight: 600; margin-bottom: 16px;">You've been invited!</h1>
+    <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">You've been invited to join an organization on LDRboard. Click the button below to accept the invitation.</p>
+    <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 32px; background-color: #6e4ef4; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Accept Invitation</a>
+  </div>
   <div style="margin-top: 32px; padding-top: 16px; border-top: 1px solid #e5e5e5;">
     <p style="color: #666666; font-size: 14px;">If you weren't expecting this invitation, you can safely ignore this email.</p>
   </div>
 </div>
 
 <!-- 3. Magic Link Template -->
-<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #ffffff; color: #1a1a1a;">
-  <div style="margin-bottom: 24px; text-align: center;">
+<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 40px 20px; background-color: #ffffff; color: #1a1a1a; text-align: center;">
+  <div style="margin-bottom: 32px;">
     <img src="{{ .SiteURL }}/logo.png" alt="LDRboard" height="40">
   </div>
-  <h1 style="color: #0F172A; font-size: 24px; font-weight: 600; margin-bottom: 16px;">Sign in to LDRboard</h1>
-  <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">Click the button below to sign in to your account. This link will expire in 24 hours.</p>
-  <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 24px; background-color: #0F172A; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Sign In</a>
-  <p style="color: #666666; font-size: 14px; margin-top: 16px;">Or copy and paste this URL into your browser:<br>{{ .ConfirmationURL }}</p>
+  <div style="background-color: #f8f9fa; padding: 32px; border-radius: 12px; margin-bottom: 32px;">
+    <h1 style="color: #1c1821; font-size: 24px; font-weight: 600; margin-bottom: 16px;">Sign in to LDRboard</h1>
+    <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">Click the button below to sign in to your account. This link will expire in 24 hours.</p>
+    <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 32px; background-color: #6e4ef4; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Sign In</a>
+  </div>
   <div style="margin-top: 32px; padding-top: 16px; border-top: 1px solid #e5e5e5;">
     <p style="color: #666666; font-size: 14px;">If you didn't request this login link, you can safely ignore this email.</p>
   </div>
 </div>
 
 <!-- 4. Change Email Address Template -->
-<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #ffffff; color: #1a1a1a;">
-  <div style="margin-bottom: 24px; text-align: center;">
+<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 40px 20px; background-color: #ffffff; color: #1a1a1a; text-align: center;">
+  <div style="margin-bottom: 32px;">
     <img src="{{ .SiteURL }}/logo.png" alt="LDRboard" height="40">
   </div>
-  <h1 style="color: #0F172A; font-size: 24px; font-weight: 600; margin-bottom: 16px;">Confirm Email Change</h1>
-  <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">Click the button below to confirm changing your email address to {{ .Email }}.</p>
-  <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 24px; background-color: #0F172A; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Confirm Email Change</a>
-  <p style="color: #666666; font-size: 14px; margin-top: 16px;">Or copy and paste this URL into your browser:<br>{{ .ConfirmationURL }}</p>
+  <div style="background-color: #f8f9fa; padding: 32px; border-radius: 12px; margin-bottom: 32px;">
+    <h1 style="color: #1c1821; font-size: 24px; font-weight: 600; margin-bottom: 16px;">Confirm Email Change</h1>
+    <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">Click the button below to confirm changing your email address to {{ .Email }}.</p>
+    <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 32px; background-color: #6e4ef4; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Confirm Email Change</a>
+  </div>
   <div style="margin-top: 32px; padding-top: 16px; border-top: 1px solid #e5e5e5;">
     <p style="color: #666666; font-size: 14px;">If you didn't request this change, please contact support immediately.</p>
   </div>
 </div>
 
 <!-- 5. Reset Password Template -->
-<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #ffffff; color: #1a1a1a;">
-  <div style="margin-bottom: 24px; text-align: center;">
+<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 40px 20px; background-color: #ffffff; color: #1a1a1a; text-align: center;">
+  <div style="margin-bottom: 32px;">
     <img src="{{ .SiteURL }}/logo.png" alt="LDRboard" height="40">
   </div>
-  <h1 style="color: #0F172A; font-size: 24px; font-weight: 600; margin-bottom: 16px;">Reset Your Password</h1>
-  <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">We received a request to reset your password. Click the button below to choose a new password.</p>
-  <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 24px; background-color: #0F172A; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Reset Password</a>
-  <p style="color: #666666; font-size: 14px; margin-top: 16px;">Or copy and paste this URL into your browser:<br>{{ .ConfirmationURL }}</p>
+  <div style="background-color: #f8f9fa; padding: 32px; border-radius: 12px; margin-bottom: 32px;">
+    <h1 style="color: #1c1821; font-size: 24px; font-weight: 600; margin-bottom: 16px;">Reset Your Password</h1>
+    <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">We received a request to reset your password. Click the button below to choose a new password.</p>
+    <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 32px; background-color: #6e4ef4; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Reset Password</a>
+  </div>
   <div style="margin-top: 32px; padding-top: 16px; border-top: 1px solid #e5e5e5;">
     <p style="color: #666666; font-size: 14px;">If you didn't request this password reset, you can safely ignore this email.</p>
-  </div>
-</div>
-
-<!-- 6. Reauthentication Template -->
-<div style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #ffffff; color: #1a1a1a;">
-  <div style="margin-bottom: 24px; text-align: center;">
-    <img src="{{ .SiteURL }}/logo.png" alt="LDRboard" height="40">
-  </div>
-  <h1 style="color: #0F172A; font-size: 24px; font-weight: 600; margin-bottom: 16px;">Verify Your Identity</h1>
-  <p style="color: #1a1a1a; font-size: 16px; line-height: 24px; margin-bottom: 24px;">For security reasons, we need to verify your identity. Click the button below to confirm this action.</p>
-  <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 12px 24px; background-color: #0F172A; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 500;">Verify Identity</a>
-  <p style="color: #666666; font-size: 14px; margin-top: 16px;">Or copy and paste this URL into your browser:<br>{{ .ConfirmationURL }}</p>
-  <div style="margin-top: 32px; padding-top: 16px; border-top: 1px solid #e5e5e5;">
-    <p style="color: #666666; font-size: 14px;">If you didn't request this verification, please contact support immediately.</p>
   </div>
 </div>
